--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-whatsapp"></i>
-                    <a href="https://wa.me/+593 96 959 2621" target="_blank" class="contact-link"> +593 96 959 2621 </a>
+                    <a href="https://wa.me/+593969592621" target="_blank" class="contact-link"> +593 96 959 2621 </a>
                 </div>
             </div>
         </div>
